5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1674_1107.log
== TEST (2019-04-30 10:24:40) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia"eh invalida")
-- ERROR:
File "XXXX", line 4
    print("A entrada",dia"eh invalida")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:24:48) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:24:55) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:24:58) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:26:26) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:"))

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:32:02) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))

if(dia+fut>6):
	X = dia+fut-7
else:
	X = dia+fut



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(dia+fut>6):
NameError: name 'fut' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:32:24) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))

if(dia+fut>6):
	X = dia+fut-7
else:
	X = dia+fut

	
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(dia+fut>6):
NameError: name 'fut' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:32:34) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))

if(dia+fut>6):
	X = dia+fut-7
else:
	X = dia+fut

	
print(X)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(dia+fut>6):
NameError: name 'fut' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:42:58) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = dia+fut-6
	else:
		X = dia+fut

	if(X==0):
		X = "Domingo"
	elif(X==1):
		X = "Segunda"
	elif(X==2):
		X = "Terca"
	elif(X==3):
		X = "Quarta"
	elif(X==4):
		X = "Quinta"
	elif(X==5):
		X = "Sexta"
	elif(X==6):
		X = "Sabado"

	if(dia == 0)
		dia = "Domingo"
	elif(dia==1):
		dia = "Segunda"
	elif(X==2):
		dia = "Terca"
	elif(X==3):
		dia = "Quarta"
	elif(X==4):
		dia = "Quinta"
	elif(X==5):
		dia = "Sexta"
	elif(X==6):
		dia = "Sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- ERROR:
File "XXXX", line 27
    if(dia == 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:43:20) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = dia+fut-6
	else:
		X = dia+fut

	if(X==0):
		X = "Domingo"
	elif(X==1):
		X = "Segunda"
	elif(X==2):
		X = "Terca"
	elif(X==3):
		X = "Quarta"
	elif(X==4):
		X = "Quinta"
	elif(X==5):
		X = "Sexta"
	elif(X==6):
		X = "Sabado"
	
	if(dia == 0):
		dia = "Domingo"
	elif(dia==1):
		dia = "Segunda"
	elif(X==2):
		dia = "Terca"
	elif(X==3):
		dia = "Quarta"
	elif(X==4):
		dia = "Quinta"
	elif(X==5):
		dia = "Sexta"
	elif(X==6):
		dia = "Sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:44:01) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = (dia+fut)/6
	else:
		X = dia+fut

	if(X==0):
		X = "Domingo"
	elif(X==1):
		X = "Segunda"
	elif(X==2):
		X = "Terca"
	elif(X==3):
		X = "Quarta"
	elif(X==4):
		X = "Quinta"
	elif(X==5):
		X = "Sexta"
	elif(X==6):
		X = "Sabado"
	
	if(dia == 0):
		dia = "Domingo"
	elif(dia==1):
		dia = "Segunda"
	elif(X==2):
		dia = "Terca"
	elif(X==3):
		dia = "Quarta"
	elif(X==4):
		dia = "Quinta"
	elif(X==5):
		dia = "Sexta"
	elif(X==6):
		dia = "Sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:44:40) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = dia+(fut//6)
	else:
		X = dia+fut

	if(X==0):
		X = "Domingo"
	elif(X==1):
		X = "Segunda"
	elif(X==2):
		X = "Terca"
	elif(X==3):
		X = "Quarta"
	elif(X==4):
		X = "Quinta"
	elif(X==5):
		X = "Sexta"
	elif(X==6):
		X = "Sabado"
	
	if(dia == 0):
		dia = "Domingo"
	elif(dia==1):
		dia = "Segunda"
	elif(X==2):
		dia = "Terca"
	elif(X==3):
		dia = "Quarta"
	elif(X==4):
		dia = "Quinta"
	elif(X==5):
		dia = "Sexta"
	elif(X==6):
		dia = "Sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:46:27) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = dia+(fut%6)
	else:
		X = dia+fut

	if(X==0):
		X = "Domingo"
	elif(X==1):
		X = "Segunda"
	elif(X==2):
		X = "Terca"
	elif(X==3):
		X = "Quarta"
	elif(X==4):
		X = "Quinta"
	elif(X==5):
		X = "Sexta"
	elif(X==6):
		X = "Sabado"
	
	if(dia == 0):
		dia = "Domingo"
	elif(dia==1):
		dia = "Segunda"
	elif(X==2):
		dia = "Terca"
	elif(X==3):
		dia = "Quarta"
	elif(X==4):
		dia = "Quinta"
	elif(X==5):
		dia = "Sexta"
	elif(X==6):
		dia = "Sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:47:22) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = dia+(fut%6)
	else:
		X = dia+fut

	if(X==0):
		X = "Domingo"
	elif(X==1):
		X = "Segunda"
	elif(X==2):
		X = "Terca"
	elif(X==3):
		X = "Quarta"
	elif(X==4):
		X = "Quinta"
	elif(X==5):
		X = "Sexta"
	elif(X==6):
		X = "Sabado"
	
	if(dia == 0):
		dia = "Domingo"
	elif(dia==1):
		dia = "Segunda"
	elif(dia==2):
		dia = "Terca"
	elif(dia==3):
		dia = "Quarta"
	elif(dia==4):
		dia = "Quinta"
	elif(dia==5):
		dia = "Sexta"
	elif(dia==6):
		dia = "Sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:47:58) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = (dia+fut)%6
	else:
		X = dia+fut

	if(X==0):
		X = "Domingo"
	elif(X==1):
		X = "Segunda"
	elif(X==2):
		X = "Terca"
	elif(X==3):
		X = "Quarta"
	elif(X==4):
		X = "Quinta"
	elif(X==5):
		X = "Sexta"
	elif(X==6):
		X = "Sabado"
	
	if(dia == 0):
		dia = "Domingo"
	elif(dia==1):
		dia = "Segunda"
	elif(dia==2):
		dia = "Terca"
	elif(dia==3):
		dia = "Quarta"
	elif(dia==4):
		dia = "Quinta"
	elif(dia==5):
		dia = "Sexta"
	elif(dia==6):
		dia = "Sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:48:06) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "Domingo"
	elif(X==1):
		X = "Segunda"
	elif(X==2):
		X = "Terca"
	elif(X==3):
		X = "Quarta"
	elif(X==4):
		X = "Quinta"
	elif(X==5):
		X = "Sexta"
	elif(X==6):
		X = "Sabado"
	
	if(dia == 0):
		dia = "Domingo"
	elif(dia==1):
		dia = "Segunda"
	elif(dia==2):
		dia = "Terca"
	elif(dia==3):
		dia = "Quarta"
	elif(dia==4):
		dia = "Quinta"
	elif(dia==5):
		dia = "Sexta"
	elif(dia==6):
		dia = "Sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:48:28) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "Domingo"
	elif(X==1):
		X = "Segunda"
	elif(X==2):
		X = "Terca"
	elif(X==3):
		X = "Quarta"
	elif(X==4):
		X = "Quinta"
	elif(X==5):
		X = "Sexta"
	elif(X==6):
		X = "Sabado"
	
	if(dia == 0):
		dia = "Domingo"
	elif(dia==1):
		dia = "Segunda"
	elif(dia==2):
		dia = "Terca"
	elif(dia==3):
		dia = "Quarta"
	elif(dia==4):
		dia = "Quinta"
	elif(dia==5):
		dia = "Sexta"
	elif(dia==6):
		dia = "Sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- EXECUTION TIME:
0.146939
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh Sabado e o dia futuro eh Segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:49:11) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "domingo"
	elif(X==1):
		X = "segunda"
	elif(X==2):
		X = "terca"
	elif(X==3):
		X = "quarta"
	elif(X==4):
		X = "quinta"
	elif(X==5):
		X = "sexta"
	elif(X==6):
		X = "sabado"
	
	if(dia == 0):
		dia = "domingo"
	elif(dia==1):
		dia = "segunda"
	elif(dia==2):
		dia = "terca"
	elif(dia==3):
		dia = "quarta"
	elif(dia==4):
		dia = "quinta"
	elif(dia==5):
		dia = "sexta"
	elif(dia==6):
		dia = "sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- EXECUTION TIME:
0.135264
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:53:18) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "domingo"
	elif(X==1):
		X = "segunda"
	elif(X==2):
		X = "terca"
	elif(X==3):
		X = "quarta"
	elif(X==4):
		X = "quinta"
	elif(X==5):
		X = "sexta"
	elif(X==6):
		X = "sabado"
	
	if(dia == 0):
		dia = "domingo"
	elif(dia==1):
		dia = "segunda"
	elif(dia==2):
		dia = "terca"
	elif(dia==3):
		dia = "quarta"
	elif(dia==4):
		dia = "quinta"
	elif(dia==5):
		dia = "sexta"
	elif(dia==6):
		dia = "sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:07:30) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "domingo"
	elif(X==1):
		X = "segunda"
	elif(X==2):
		X = "terca"
	elif(X==3):
		X = "quarta"
	elif(X==4):
		X = "quinta"
	elif(X==5):
		X = "sexta"
	elif(X==6):
		X = "sabado"
	
	if(dia == 0):
		dia = "domingo"
	elif(dia==1):
		dia = "segunda"
	elif(dia==2):
		dia = "terca"
	elif(dia==3):
		dia = "quarta"
	elif(dia==4):
		dia = "quinta"
	elif(dia==5):
		dia = "sexta"
	elif(dia==6):
		dia = "sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:07:38) 
-- CODE:
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "domingo"
	elif(X==1):
		X = "segunda"
	elif(X==2):
		X = "terca"
	elif(X==3):
		X = "quarta"
	elif(X==4):
		X = "quinta"
	elif(X==5):
		X = "sexta"
	elif(X==6):
		X = "sabado"
	
	if(dia == 0):
		dia = "domingo"
	elif(dia==1):
		dia = "segunda"
	elif(dia==2):
		dia = "terca"
	elif(dia==3):
		dia = "quarta"
	elif(dia==4):
		dia = "quinta"
	elif(dia==5):
		dia = "sexta"
	elif(dia==6):
		dia = "sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
